{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 102,
  "lineage": "81ca0427-a01c-ce4d-8a82-11a1de99a847",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822923364368:vpc/vpc-0cbf157632debbde9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-050afbafd1743c46b",
            "default_route_table_id": "rtb-08901d1c15584c3bb",
            "default_security_group_id": "sg-0589da029675a1a17",
            "dhcp_options_id": "dopt-036434adc6558e467",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cbf157632debbde9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08901d1c15584c3bb",
            "owner_id": "822923364368",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-server",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04c7815cd1d6c8fa4",
            "arn": "arn:aws:ec2:us-west-2:822923364368:instance/i-0727ad3c7a4ba2e27",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0727ad3c7a4ba2e27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f4e54d12cc57aff9"
              }
            ],
            "primary_network_interface_id": "eni-0f4e54d12cc57aff9",
            "private_dns": "ip-172-31-42-176.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.176",
            "public_dns": "ec2-34-221-61-140.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.61.140",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9df64e9db7fe61b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d9992f679688e5",
            "tags": {
              "Name": "app-server",
              "OS_family": "redhat"
            },
            "tags_all": {
              "Name": "app-server",
              "OS_family": "redhat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2386ce249a576a1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "i-0727ad3c7a4ba2e27",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "control-node",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d76b909de1a0595d",
            "arn": "arn:aws:ec2:us-west-2:822923364368:instance/i-0e10bdd616df7b0d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e10bdd616df7b0d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-048dcec87cecd0073"
              }
            ],
            "primary_network_interface_id": "eni-048dcec87cecd0073",
            "private_dns": "ip-172-31-35-114.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.114",
            "public_dns": "ec2-35-93-211-243.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.211.243",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f85d82afc590d4fe",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d9992f679688e5",
            "tags": {
              "Name": "control-node",
              "OS_family": "ubuntu"
            },
            "tags_all": {
              "Name": "control-node",
              "OS_family": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2386ce249a576a1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "i-0e10bdd616df7b0d0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "db-server",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04c7815cd1d6c8fa4",
            "arn": "arn:aws:ec2:us-west-2:822923364368:instance/i-0c51bd43bb629d990",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c51bd43bb629d990",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b271a35565af505"
              }
            ],
            "primary_network_interface_id": "eni-08b271a35565af505",
            "private_dns": "ip-172-31-47-84.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.84",
            "public_dns": "ec2-34-210-79-56.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.79.56",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0321ce84f04edd0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d9992f679688e5",
            "tags": {
              "Name": "db-server",
              "OS_family": "redhat"
            },
            "tags_all": {
              "Name": "db-server",
              "OS_family": "redhat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2386ce249a576a1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "i-0c51bd43bb629d990",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "web-server",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-043ab4148b7bb33e9",
            "arn": "arn:aws:ec2:us-west-2:822923364368:instance/i-0cb11e3966c5313a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb11e3966c5313a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec4f1c8839c2626e"
              }
            ],
            "primary_network_interface_id": "eni-0ec4f1c8839c2626e",
            "private_dns": "ip-172-31-35-209.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.209",
            "public_dns": "ec2-44-252-105-156.us-west-2.compute.amazonaws.com",
            "public_ip": "44.252.105.156",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071d2fa3251d30159",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d9992f679688e5",
            "tags": {
              "Name": "web-server",
              "OS_family": "amazon"
            },
            "tags_all": {
              "Name": "web-server",
              "OS_family": "amazon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2386ce249a576a1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "i-0cb11e3966c5313a6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822923364368:security-group/sg-0a2386ce249a576a1",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2386ce249a576a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra-security-group",
            "name_prefix": "",
            "owner_id": "822923364368",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbf157632debbde9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "sg-0a2386ce249a576a1",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822923364368:security-group-rule/sgr-01c07a4e05ff9dd98",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01c07a4e05ff9dd98",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0a2386ce249a576a1",
            "security_group_rule_id": "sgr-01c07a4e05ff9dd98",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "sgr-01c07a4e05ff9dd98",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822923364368:security-group-rule/sgr-05a12ccaa52e03a1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05a12ccaa52e03a1c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0a2386ce249a576a1",
            "security_group_rule_id": "sgr-05a12ccaa52e03a1c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "sgr-05a12ccaa52e03a1c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822923364368:security-group-rule/sgr-0d12aad10c53974a3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d12aad10c53974a3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0a2386ce249a576a1",
            "security_group_rule_id": "sgr-0d12aad10c53974a3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "822923364368",
            "id": "sgr-0d12aad10c53974a3",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    }
  ]
}